Fix 100vh ignoring the bottom edge of the browser viewport on mobile

--- a/src/styles/page-layout.css
+++ b/src/styles/page-layout.css
@@ -15,6 +15,7 @@ body {
 
 #content {
     min-height: 100vh;
+    min-height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
 }
